[tool.poetry]
name = "ted-tools"
version = "0.1.0"
description = ""
authors = ["Tedfulk <teddyfulk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.1.6"
openai = "^1.12.0"
pydantic = "^2.6.1"
typer = "^0.9.0"
pillow = "^10.2.0"
inquirer = "^3.2.4"
instructor = "^0.6.1"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
